fixed commento textbox dark mode

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -38,4 +38,8 @@
   .commento-root * {
     @apply text-gray-300 !important;
   }
+
+  .commento-root textarea {
+    background: #12191f !important;
+  }
 }
